--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "native-base": "^3.4.13",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-svg": "12.1.1",
+    "realm": "^10.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
