--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "@realm/react": "^0.3.2",
     "native-base": "^3.4.13",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
     "react-native-svg": "12.1.1",
     "realm": "^10.20.0"
   },
