--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native": "0.69.5",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.4.4",
     "react-native-vector-icons": "^9.2.0",
     "realm": "^10.20.0"
   },
