--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "native-base": "^3.4.13",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^12.4.4",
     "react-native-vector-icons": "^9.2.0",
-    "realm": "^10.20.0"
+    "realm": "^10.20.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -31,6 +33,7 @@
     "@types/react-native": "^0.69.5",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
