style: Format code style

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -225,6 +225,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        metafocus {
+            storeFile file('metafocus.keystore')
+            storePassword 'metafocus'
+            keyAlias 'metafocus'
+            keyPassword 'metafocus'
+        }
     }
     buildTypes {
         debug {
@@ -233,7 +239,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.metafocus
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
