--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "native-base": "^3.4.13",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
