--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.69.5",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^12.4.4",
