--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "@realm/react": "^0.3.2",
+    "lodash": "^4.17.21",
     "native-base": "^3.4.13",
     "react": "18.0.0",
     "react-native": "0.69.5",
@@ -21,6 +23,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal": "^13.0.1",
+    "react-native-multi-selectbox-typescript": "^0.1.2",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^12.4.4",
@@ -33,6 +36,7 @@
     "@babel/runtime": "^7.12.5",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.191",
     "@types/react-native": "^0.69.5",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
