--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^8.1.3",
     "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-modal": "^13.0.1",
