--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prebuild": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle",
-    "build": "cd android && ./gradlew assembleRelease"
+    "build": "cd android && ./gradlew assembleRelease",
+    "copyapk": "cd android\\app\\build\\outputs\\apk\\release && adb push app-release.apk /sdcard/0/metafocus.apk"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
